# OpenCL

./: OpenCL.code-workspace  README.md
.buildSystem/linux/: build.sh
00.Info/: 00.Info  CMakeLists.txt
01.Sum/: 01.Sum  CMakeLists.txt  sum.cl
02.DeviceQuery/: 02.DeviceQuery
02.oclDeviceQuery/: CMakeLists.txt  oclDeviceQuery.cpp
03.DotProduct/: CMakeLists.txt  DotProduct.cl  DotProduct.cpp
03.oclDotProduct/: 03.oclDotProduct  oclDotProduct.cl  oclDotProduct.cpp
04.oclVectorAdd/: 04.oclVectorAdd  CMakeLists.txt  oclVectorAdd.cl  oclVectorAdd.cpp
Common/: errors.h  timer.h  utils.h
My_Studies/00.Info/: 00.Info  CMakeLists.txt  info.cpp
My_Studies/01.Sum/: 01.Sum  CMakeLists.txt  main.cpp
